# claude-recall

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: eval_results.md
docs/: blog-eval-zh.md  blog-eval.md  show-hn.md
src/claude_recall/: __init__.py  __main__.py  cli.py  config.py  watch.py
src/claude_recall/embed/: base.py  cache.py  local.py
src/claude_recall/eval/: run.py
src/claude_recall/ingest/: chunker.py  pipeline.py
src/claude_recall/parsers/: claude_code.py
src/claude_recall/search/: bm25.py  filters.py  hybrid.py  rerank.py  vector.py
src/claude_recall/store/: db.py  repo.py  schema.sql  session.py
src/claude_recall/ui/: server.py
src/claude_recall/ui/static/: app.css
src/claude_recall/ui/templates/: _hits.html  base.html  index.html  session.html
tests/fixtures/: queries.jsonl
tests/unit/: test_chunker.py  test_filters.py  test_parser.py  test_search.py  test_server.py  test_session_store.py
tools/: label_eval.py
