[project]
name = "claudegrep"
version = "0.2.0"
description = "grep, but semantic, for your Claude Code conversation history. Local-first, hybrid BM25+vector retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "libingbing" }]
keywords = ["claude", "claude-code", "search", "rag", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=3.0",
    "numpy>=2.4.4",
    "pyperclip>=1.11.0",
    "watchdog>=6.0.0",
]

[project.scripts]
recall = "claude_recall.cli:app"

[project.urls]
Homepage = "https://github.com/lbbstarry/claudegrep"
Repository = "https://github.com/lbbstarry/claudegrep"
Issues = "https://github.com/lbbstarry/claudegrep/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_recall"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]
# B008 false-positive on Typer's idiomatic Option/Argument defaults.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated tests",
    "integration: tests that hit the filesystem or DB",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["claude_recall"]
